force-app/main/default/objects/Contact/fields/Channel_Partner_Portal_Activated__c.field-meta.xml
<CustomField>
    <fullName>Channel_Partner_Portal_Activated__c</fullName>
    <formula>Account.Channel_Partner_Activated__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Channel Partner Portal Activated</label>
    <type>Checkbox</type>
</CustomField>