force-app/main/default/objects/Contact/fields/RW_Secondary_Mobile_No__c.field-meta.xml
<CustomField>
    <fullName>RW_Secondary_Mobile_No__c</fullName>
    <label>Secondary Mobile No.</label>
    <type>Phone</type>
</CustomField>