force-app/main/default/objects/Contact/validationRules/Mobile_Number.validationRule-meta.xml
<ValidationRule>
    <fullName>Mobile_Number</fullName>
    <active>true</active>
    <errorConditionFormula>AND(OR(IF(RW_Mobile_No__c!= null, NOT(REGEX(RW_Mobile_No__c, &quot;[0-9]{10,15}&quot;)), false)))</errorConditionFormula>
    <errorMessage>Please enter a valid mobile number</errorMessage>
</ValidationRule>