force-app/main/default/objects/Contact/validationRules/Phone_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Phone_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(OR(IF(Phone!= null, NOT(REGEX(Phone, &quot;[0-9]{7,13}&quot;)), false)))</errorConditionFormula>
    <errorMessage>Please enter valid Phone number.</errorMessage>
</ValidationRule>